<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_home_name"
                android:textColor="@color/blue"
                android:textSize="30sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Button
                app:backgroundTint="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/admin"
                android:gravity="center"
                android:text="@string/admin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:enabled="false"
                android:visibility="gone"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/benvenuto"
                android:text="@string/benvenuto"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/i_tuoi_dati"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="25sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="25sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/citta_di_provenienza"
                        android:textColor="@color/black"
                        android:textSize="25sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/data_di_nascita"
                        android:textColor="@color/black"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/username"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textColor="@color/blue"
                        android:textSize="25sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:gravity="center"
                        android:text="@string/password"
                        android:textColor="@color/blue"
                        android:textSize="25sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/citta_di_provenienza"
                        android:gravity="center"
                        android:text="@string/citta_di_provenienza"
                        android:textColor="@color/blue"
                        android:textSize="25sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/data_di_nascita"
                        android:gravity="center"
                        android:text="@string/data_di_nascita"
                        android:textColor="@color/blue"
                        android:textSize="25sp"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <Button
                app:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_gestisci_utenti"
                android:text="@string/button_gestisci_utenti_name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="gone"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <Button
                app:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_logout"
                android:text="@string/button_logout_name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/link_modifica_password"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/link_modifica_password_name"
                android:textColor="@color/blue"
                android:textSize="20sp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>