<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ModificaPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_modifica_password_name"
                android:textColor="@color/blue"
                android:textSize="30sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="25sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/username"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textColor="@color/blue"
                        android:textSize="25sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:gravity="center"
                        android:text="@string/password"
                        android:textColor="@color/blue"
                        android:textSize="25sp"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <EditText
                app:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nuova_password"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="25sp"
                android:hint="@string/nuova_password"
                android:autofillHints="@string/nuova_password"
                android:inputType="textPassword"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <EditText
                app:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/conferma_password"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="25sp"
                android:hint="@string/conferma_password"
                android:autofillHints="@string/conferma_password"
                android:inputType="textPassword"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <Button
                app:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_aggiorna_password"
                android:text="@string/button_aggiorna_password_name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <Button
                app:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_home"
                android:text="@string/button_home_name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>