<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".GestisciUtentiActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_gestisci_utenti_name"
                android:textColor="@color/blue"
                android:textSize="30sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <EditText
                app:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cerca_utente"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="25sp"
                android:hint="@string/cerca_utente"
                android:autofillHints="@string/cerca_utente"
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout"
                android:orientation="vertical"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <Button
                app:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_home"
                android:text="@string/button_home_name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>